--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   google_fonts: ^6.2.1
   flutter_svg: ^2.0.16
   pin_code_fields: ^8.0.1
+  intl: ^0.20.1
+  file_picker: ^8.1.5
 
 dev_dependencies:
   flutter_test:
